@@ -1,6 +1,6 @@
 /*
  * DBeaver - Universal Database Manager
- * Copyright (C) 2010-2023 DBeaver Corp and others
+ * Copyright (C) 2010-2025 DBeaver Corp and others
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -23,7 +23,6 @@ import org.eclipse.core.runtime.Status;
 import org.eclipse.core.runtime.jobs.Job;
 import org.eclipse.jface.dialogs.IDialogConstants;
 import org.eclipse.jface.dialogs.ProgressMonitorDialog;
-import org.eclipse.jface.operation.IRunnableWithProgress;
 import org.eclipse.jface.operation.ModalContext;
 import org.eclipse.swt.custom.BusyIndicator;
 import org.eclipse.swt.dnd.Clipboard;
@@ -34,35 +33,34 @@ import org.eclipse.swt.events.SelectionListener;
 import org.eclipse.swt.widgets.Button;
 import org.eclipse.swt.widgets.Display;
 import org.eclipse.swt.widgets.Shell;
-import org.eclipse.ui.*;
-import org.eclipse.ui.services.IDisposable;
+import org.eclipse.ui.IWorkbench;
+import org.eclipse.ui.IWorkbenchPage;
+import org.eclipse.ui.PartInitException;
+import org.eclipse.ui.PlatformUI;
 import org.jkiss.code.NotNull;
 import org.jkiss.code.Nullable;
+import org.jkiss.dbeaver.DBDatabaseException;
 import org.jkiss.dbeaver.DBException;
-import org.jkiss.dbeaver.DBeaverPreferences;
 import org.jkiss.dbeaver.Log;
-import org.jkiss.dbeaver.ModelPreferences;
 import org.jkiss.dbeaver.model.*;
 import org.jkiss.dbeaver.model.access.DBAPasswordChangeInfo;
 import org.jkiss.dbeaver.model.connection.DBPAuthInfo;
-import org.jkiss.dbeaver.model.connection.DBPDriver;
-import org.jkiss.dbeaver.model.connection.DBPDriverDependencies;
 import org.jkiss.dbeaver.model.exec.DBExecUtils;
 import org.jkiss.dbeaver.model.navigator.DBNNode;
+import org.jkiss.dbeaver.model.navigator.fs.DBNPathBase;
 import org.jkiss.dbeaver.model.runtime.*;
 import org.jkiss.dbeaver.model.runtime.load.ILoadService;
 import org.jkiss.dbeaver.model.runtime.load.ILoadVisualizer;
-import org.jkiss.dbeaver.model.sql.DBSQLException;
 import org.jkiss.dbeaver.model.struct.DBSObject;
 import org.jkiss.dbeaver.runtime.DBWorkbench;
 import org.jkiss.dbeaver.runtime.DBeaverNotifications;
 import org.jkiss.dbeaver.runtime.ui.DBPPlatformUI;
+import org.jkiss.dbeaver.runtime.ui.console.ConsoleUserInterface;
 import org.jkiss.dbeaver.ui.*;
 import org.jkiss.dbeaver.ui.actions.datasource.DataSourceInvalidateHandler;
 import org.jkiss.dbeaver.ui.dialogs.*;
 import org.jkiss.dbeaver.ui.dialogs.connection.PasswordChangeDialog;
-import org.jkiss.dbeaver.ui.dialogs.driver.DriverDownloadDialog;
-import org.jkiss.dbeaver.ui.dialogs.driver.DriverEditDialog;
+import org.jkiss.dbeaver.ui.dialogs.driver.DriverEditHelpers;
 import org.jkiss.dbeaver.ui.dialogs.exec.ExecutionQueueErrorJob;
 import org.jkiss.dbeaver.ui.internal.UIConnectionMessages;
 import org.jkiss.dbeaver.ui.navigator.actions.NavigatorHandlerObjectOpen;
@@ -73,40 +71,30 @@ import org.jkiss.dbeaver.ui.views.process.ShellProcessView;
 import org.jkiss.dbeaver.utils.GeneralUtils;
 import org.jkiss.utils.CommonUtils;
 
-import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.Future;
-import java.util.stream.Collectors;
 
 /**
  * DBeaver UI core
  */
-public class DesktopUI implements DBPPlatformUI {
+public class DesktopUI extends ConsoleUserInterface {
 
     private static final Log log = Log.getLog(DesktopUI.class);
 
-    private static DesktopUI instance;
-
-    private TrayIconHandler trayItem;
-    private final List<IDisposable> globalDisposables = new ArrayList<>();
     private WorkbenchContextListener contextListener;
 
     public static DesktopUI getInstance() {
-        if (instance == null) {
-            instance = new DesktopUI();
-            instance.initialize();
-        }
-        return instance;
+        return (DesktopUI) DBWorkbench.getPlatformUI();
     }
 
     static void disposeUI() {
-        if (instance != null) {
+        DBPPlatformUI platformUI = DBWorkbench.getPlatformUI();
+        if (platformUI instanceof DesktopUI desktopUI) {
             try {
-                instance.dispose();
+                desktopUI.dispose();
             } catch (Throwable e) {
                 log.error(e);
             }
@@ -114,64 +102,25 @@ public class DesktopUI implements DBPPlatformUI {
     }
 
     private void dispose() {
-        if (trayItem != null) {
-            trayItem.hide();
-        }
-
-        List<IDisposable> dispList = new ArrayList<>(globalDisposables);
-        Collections.reverse(dispList);
-        for (IDisposable disp : dispList) {
-            try {
-                disp.dispose();
-            } catch (Exception e) {
-                log.error(e);
-            }
-            globalDisposables.remove(disp);
+        if (contextListener != null) {
+            contextListener.dispose();
         }
     }
 
-    private void initialize() {
-        this.trayItem = new TrayIconHandler();
-
+    // This method is called during startup thru @ComponentReference in workbench
+    public void initialize() {
         new AbstractJob("Workbench listener") {
+            @NotNull
             @Override
-            protected IStatus run(DBRProgressMonitor monitor) {
+            protected IStatus run(@NotNull DBRProgressMonitor monitor) {
                 if (PlatformUI.isWorkbenchRunning() && !PlatformUI.getWorkbench().isStarting()) {
-                    UIUtils.asyncExec(() -> {
-                        contextListener = WorkbenchContextListener.registerInWorkbench();
-                    });
+                    UIUtils.asyncExec(() -> contextListener = WorkbenchContextListener.registerInWorkbench());
                 } else {
                     schedule(50);
                 }
                 return Status.OK_STATUS;
             }
         }.schedule();
-    }
-
-    public void refreshPartContexts(IWorkbenchPart part) {
-        if (contextListener != null) {
-            contextListener.deactivatePartContexts(part);
-            contextListener.activatePartContexts(part);
-        }
-    }
-
-    @Override
-    public void notifyAgent(String message, int status) {
-        if (!ModelPreferences.getPreferences().getBoolean(DBeaverPreferences.AGENT_LONG_OPERATION_NOTIFY)) {
-            // Notifications disabled
-            return;
-        }
-        if (TrayIconHandler.isSupported()) {
-            getInstance().trayItem.notify(message, status);
-        } else {
-            DBeaverNotifications.showNotification(
-                "agentNotify",
-                "Agent Notification",
-                message,
-                status == IStatus.INFO ? DBPMessageType.INFORMATION :
-                    (status == IStatus.ERROR ? DBPMessageType.ERROR : DBPMessageType.WARNING),
-                null);
-        }
     }
 
     @Override
@@ -188,17 +137,10 @@ public class DesktopUI implements DBPPlatformUI {
     }
 
     @Override
-    public boolean downloadDriverFiles(DBPDriver driver, DBPDriverDependencies dependencies) {
-        return new UITask<Boolean>() {
-            @Override
-            protected Boolean runTask() {
-                return DriverDownloadDialog.downloadDriverFiles(null, driver, dependencies);
-            }
-        }.execute();
-    }
-
-    @Override
-    public UserResponse showError(@Nullable final String title, @Nullable final String message, @NotNull final IStatus status) {
+    public UserResponse showError(@NotNull final String title, @Nullable final String message, @NotNull final IStatus status) {
+        if (isHeadlessMode()) {
+            return super.showError(title, message, status);
+        }
         IStatus rootStatus = status;
         for (IStatus s = status; s != null; ) {
             if (s.getException() instanceof DBException) {
@@ -235,27 +177,36 @@ public class DesktopUI implements DBPPlatformUI {
         return UserResponse.OK;
     }
 
+    private static boolean isHeadlessMode() {
+        return DBWorkbench.getPlatform().getApplication().isHeadlessMode();
+    }
+
     @Override
-    public UserResponse showError(@Nullable String title, @Nullable String message, @NotNull Throwable error) {
-        String errorMsg=error.toString();
-        if(error instanceof DBSQLException &&errorMsg.contains("YAS-04253 PL/SQL compiling errors")&&errorMsg.contains("YAS-05329 no attributes found in object type")){
-            title="Warning:unusable customized type";
-            message="Type has been created successfully, but cannot be used!";
+    public UserResponse showError(@NotNull String title, @Nullable String message, @NotNull Throwable error) {
+        if (isHeadlessMode()) {
+            return super.showError(title, message, error);
         }
         return showError(title, message, GeneralUtils.makeExceptionStatus(error));
     }
 
     @Override
     public UserResponse showError(@NotNull String title, @Nullable String message) {
+        if (isHeadlessMode()) {
+            return super.showError(title, message);
+        }
         return showError(title, null, new Status(IStatus.ERROR, DesktopPlatform.PLUGIN_ID, message));
     }
 
     @Override
     public void showMessageBox(@NotNull String title, String message, boolean error) {
-        if (error) {
-            showMessageBox(title, message, DBIcon.STATUS_ERROR);
+        if (isHeadlessMode()) {
+            super.showMessageBox(title, message, error);
         } else {
-            showMessageBox(title, message, DBIcon.STATUS_INFO);
+            if (error) {
+                showMessageBox(title, message, DBIcon.STATUS_ERROR);
+            } else {
+                showMessageBox(title, message, DBIcon.STATUS_INFO);
+            }
         }
     }
 
@@ -271,33 +222,72 @@ public class DesktopUI implements DBPPlatformUI {
 
     @Override
     public void showWarningMessageBox(@NotNull String title, String message) {
-        showMessageBox(title, message, DBIcon.STATUS_WARNING);
+        if (isHeadlessMode()) {
+            super.showWarningMessageBox(title, message);
+        } else {
+            showMessageBox(title, message, DBIcon.STATUS_WARNING);
+        }
     }
 
     @Override
     public void showNotification(@NotNull String title, String message, boolean error, @Nullable Runnable feedback) {
-        NotificationUtils.sendNotification(title, title, message, error ? DBPMessageType.ERROR : DBPMessageType.INFORMATION, feedback);
+        NotificationUtils.sendNotification(
+            DBeaverNotifications.NT_GENERIC,
+            title,
+            message,
+            error ? DBPMessageType.ERROR : DBPMessageType.INFORMATION,
+            feedback
+        );
     }
 
     @Override
     public void showWarningNotification(@NotNull String title, String message) {
-        showNotification(title, message, DBPMessageType.WARNING);
-    }
-
-    private static void showNotification(@NotNull String title, @NotNull String message, @NotNull DBPMessageType type) {
-        NotificationUtils.sendNotification(title, title, message, type, null);
+        NotificationUtils.sendNotification(
+            DBeaverNotifications.NT_GENERIC,
+            title,
+            message,
+            DBPMessageType.WARNING,
+            null
+        );
     }
 
     @Override
     public boolean confirmAction(String title, String message) {
+        if (isHeadlessMode()) {
+            return super.confirmAction(title, message);
+        }
         return UIUtils.confirmAction(title, message);
     }
 
     @Override
     public boolean confirmAction(String title, String message, boolean isWarning) {
+        if (isHeadlessMode()) {
+            return super.confirmAction(title, message, isWarning);
+        }
         return UIUtils.confirmAction(null, title, message, isWarning ? DBIcon.STATUS_WARNING : DBIcon.STATUS_QUESTION);
     }
-    
+
+    @Override
+    public boolean confirmAction(@NotNull String title, @NotNull String message, @NotNull String buttonLabel, boolean isWarning) {
+        if (isHeadlessMode()) {
+            return super.confirmAction(title, message, buttonLabel, isWarning);
+        }
+        final Reply confirm = new Reply(buttonLabel);
+        final Reply[] decision = new Reply[1];
+
+        UIUtils.syncExec(() -> {
+            decision[0] = MessageBoxBuilder.builder(UIUtils.getActiveWorkbenchShell())
+                .setTitle(title)
+                .setMessage(message)
+                .setReplies(confirm, Reply.CANCEL)
+                .setDefaultReply(Reply.CANCEL)
+                .setPrimaryImage(isWarning ? DBIcon.STATUS_WARNING : DBIcon.STATUS_QUESTION)
+                .showMessageBox();
+        });
+
+        return decision[0] == confirm;
+    }
+
     @NotNull
     @Override
     public UserChoiceResponse showUserChoice(
@@ -308,24 +298,27 @@ public class DesktopUI implements DBPPlatformUI {
         @Nullable Integer previousChoice,
         int defaultChoice
     ) {
+        if (isHeadlessMode()) {
+            return super.showUserChoice(title, message, labels, forAllLabels, previousChoice, defaultChoice);
+        }
         final List<Reply> reply = labels.stream()
             .map(s -> CommonUtils.isEmpty(s) ? null : new Reply(s))
-            .collect(Collectors.toList());
+            .toList();
 
-        return UIUtils.syncExec(new RunnableWithResult<UserChoiceResponse>() {
+        UserChoiceResponse userChoice = UIUtils.syncExec(new RunnableWithResult<>() {
             public UserChoiceResponse runWithResult() {
                 List<Button> extraCheckboxes = new ArrayList<>(forAllLabels.size());
-                Integer[] selectedCheckboxIndex = { null };
+                Integer[] selectedCheckboxIndex = {null};
                 MessageBoxBuilder mbb = MessageBoxBuilder.builder(UIUtils.getActiveWorkbenchShell())
                     .setTitle(title)
                     .setMessage(message)
                     .setReplies(reply.stream().filter(Objects::nonNull).toArray(Reply[]::new))
                     .setPrimaryImage(DBIcon.STATUS_WARNING);
-                
+
                 if (previousChoice != null && reply.get(previousChoice) != null) {
                     mbb.setDefaultReply(reply.get(previousChoice));
                 }
-                if (forAllLabels.size() > 0) {
+                if (!forAllLabels.isEmpty()) {
                     mbb.setCustomArea(pp -> {
                         SelectionListener selectionListener = SelectionListener.widgetSelectedAdapter(e -> {
                             int chkIndex = (Integer) e.widget.getData();
@@ -346,12 +339,13 @@ public class DesktopUI implements DBPPlatformUI {
                         }
                     });
                 }
-                
+
                 Reply result = mbb.showMessageBox();
                 int choiceIndex = reply.indexOf(result);
                 return new UserChoiceResponse(choiceIndex, selectedCheckboxIndex[0]);
             }
-        }); 
+        });
+        return userChoice == null ? new UserChoiceResponse(0, null) : userChoice;
     }
 
     @Override
@@ -359,14 +353,9 @@ public class DesktopUI implements DBPPlatformUI {
         return ExecutionQueueErrorJob.showError(task, error, queue);
     }
 
-    @Override
-    public long getLongOperationTimeout() {
-        return DBWorkbench.getPlatform().getPreferenceStore().getLong(DBeaverPreferences.AGENT_LONG_OPERATION_TIMEOUT);
-    }
-
     private static UserResponse showDatabaseError(String message, DBException error)
     {
-        DBPDataSource dataSource = error.getDataSource();
+        DBPDataSource dataSource = error instanceof DBDatabaseException dbe ? dbe.getDataSource() : null;
         DBPErrorAssistant.ErrorType errorType = dataSource == null ? DBPErrorAssistant.ErrorType.NORMAL : DBExecUtils.discoverErrorType(dataSource, error);
         switch (errorType) {
             case CONNECTION_LOST:
@@ -377,26 +366,47 @@ public class DesktopUI implements DBPPlatformUI {
                 DataSourceInvalidateHandler.showConnectionLostDialog(null, message, error);
                 return UserResponse.OK;
             case DRIVER_CLASS_MISSING:
-                DriverEditDialog.showBadConfigDialog(null, message, error);
+                DriverEditHelpers.showBadConfigDialog(null, message, error);
                 return UserResponse.OK;
         }
 
         return null;
     }
 
+    @Nullable
     @Override
-    public DBPAuthInfo promptUserCredentials(final String prompt, final String userName, final String userPassword, final boolean passwordOnly, boolean showSavePassword) {
-        return promptUserCredentials(prompt,
+    public DBPAuthInfo promptUserCredentials(
+        @Nullable String prompt,
+        @Nullable String description,
+        @Nullable String userName,
+        @Nullable String userPassword,
+        boolean passwordOnly,
+        boolean showSavePassword
+    ) {
+        return promptUserCredentials(
+            prompt,
+            description,
             UIConnectionMessages.dialog_connection_auth_label_username,
             userName,
             UIConnectionMessages.dialog_connection_auth_label_password,
             userPassword,
             passwordOnly,
-            showSavePassword);
+            showSavePassword
+        );
     }
 
+    @Nullable
     @Override
-    public DBPAuthInfo promptUserCredentials(String prompt, String userNameLabel, String userName, String passwordLabel, String userPassword, boolean passwordOnly, boolean showSavePassword) {
+    public DBPAuthInfo promptUserCredentials(
+        @Nullable String prompt,
+        @Nullable String description,
+        @NotNull String userNameLabel,
+        @Nullable String userName,
+        @NotNull String passwordLabel,
+        @Nullable String userPassword,
+        boolean passwordOnly,
+        boolean showSavePassword
+    ) {
         return new UITask<DBPAuthInfo>() {
             @Override
             public DBPAuthInfo runTask() {
@@ -404,6 +414,7 @@ public class DesktopUI implements DBPPlatformUI {
                 final BaseAuthDialog authDialog = new BaseAuthDialog(shell, prompt, passwordOnly, showSavePassword);
                 authDialog.setUserNameLabel(userNameLabel);
                 authDialog.setPasswordLabel(passwordLabel);
+                authDialog.setDescription(description == null ? prompt : description);
                 if (!passwordOnly) {
                     authDialog.setUserName(userName);
                 }
@@ -417,6 +428,7 @@ public class DesktopUI implements DBPPlatformUI {
         }.execute();
     }
 
+    @Nullable
     @Override
     public DBAPasswordChangeInfo promptUserPasswordChange(String prompt, String userName, String oldPassword, boolean userEditable, boolean oldPasswordVisible) {
         // Ask user
@@ -515,16 +527,8 @@ public class DesktopUI implements DBPPlatformUI {
     }
 
     @Override
-    public void executeWithProgress(@NotNull Runnable runnable) {
-        UIExecutionQueue.queueExec(runnable);
-    }
-
-    @Override
-    public void executeWithProgress(@NotNull DBRRunnableWithProgress runnable) throws InvocationTargetException, InterruptedException {
-        // FIXME: we need to run with progress service bu we can't change active control focus
-        // Otherwise it breaks soem functions (e.g. data editor value save as it handles focus events).
-        // so we can use runInProgressServie function
-        runnable.run(new VoidProgressMonitor());
+    public void executeInMainThread(@NotNull Runnable runnable) {
+        UIUtils.syncExec(runnable);
     }
 
     /**
@@ -537,8 +541,9 @@ public class DesktopUI implements DBPPlatformUI {
         @NotNull DBRRunnableWithResult<Future<T>> runnable
     ) {
         final AbstractJob job = new AbstractJob(operationDescription) {
+            @NotNull
             @Override
-            protected IStatus run(DBRProgressMonitor monitor) {
+            protected IStatus run(@NotNull DBRProgressMonitor monitor) {
                 monitor.beginTask(operationDescription, IProgressMonitor.UNKNOWN);
                 try {
                     UIExecutionQueue.blockQueue();
@@ -606,13 +611,10 @@ public class DesktopUI implements DBPPlatformUI {
                             }  
                         };
                         
-                        progress.run(true, runnable != null, new IRunnableWithProgress() {
-                            @Override
-                            public void run(IProgressMonitor monitor) throws InterruptedException {
-                                monitor.beginTask(operationDescription, IProgressMonitor.UNKNOWN);
-                                job.join();
-                                monitor.done();
-                            }
+                        progress.run(true, true, monitor -> {
+                            monitor.beginTask(operationDescription, IProgressMonitor.UNKNOWN);
+                            job.join();
+                            monitor.done();
                         });
                     }
                 } catch (Exception ex) {
@@ -626,25 +628,35 @@ public class DesktopUI implements DBPPlatformUI {
         } catch (InterruptedException ex) {
             return CompletableFuture.failedFuture(ex);
         }
-        
-        return job.getResult().isOK() ? runnable.getResult() : CompletableFuture.failedFuture(job.getResult().getException());
+
+        IStatus result = job.getResult();
+        if (result == null) {
+            return CompletableFuture.failedFuture(new DBException("the result of the job is null. Has it finished?"));
+        }
+        if (result.isOK()) {
+            return runnable.getResult();
+        }
+        return CompletableFuture.failedFuture(result.getException());
     }
-    
+
+    @Override
+    public <T> T runWithMonitor(@NotNull DBRRunnableWithReturn<T> runnable) throws DBException {
+        return UIUtils.runWithMonitor(runnable);
+    }
+
+    @Override
+    public <T> T runWithProgress(@NotNull DBRRunnableWithReturn<T> runnable) throws DBException {
+        return UIUtils.runWithDialog(runnable);
+    }
+
     @NotNull
     @Override
-    public <RESULT> Job createLoadingService(ILoadService<RESULT> loadingService, ILoadVisualizer<RESULT> visualizer) {
+    public <RESULT> Job createLoadingService(@NotNull ILoadService<RESULT> loadingService, @NotNull ILoadVisualizer<RESULT> visualizer) {
         return LoadingJob.createService(loadingService, visualizer);
     }
 
     @Override
-    public void refreshPartState(Object part) {
-        if (part instanceof IWorkbenchPart) {
-            UIUtils.asyncExec(() -> DesktopUI.getInstance().refreshPartContexts((IWorkbenchPart)part));
-        }
-    }
-
-    @Override
-    public void copyTextToClipboard(String text, boolean htmlFormat) {
+    public void copyTextToClipboard(@NotNull String text, boolean htmlFormat) {
         if (CommonUtils.isEmpty(text)) {
             return;
         }
@@ -666,13 +678,26 @@ public class DesktopUI implements DBPPlatformUI {
     }
 
     @Override
-    public void executeShellProgram(String shellCommand) {
+    public void executeShellProgram(@NotNull String shellCommand) {
         UIUtils.asyncExec(() -> ShellUtils.launchProgram(shellCommand));
     }
 
     @Override
     public void showInSystemExplorer(@NotNull String path) {
         UIUtils.asyncExec(() -> ShellUtils.showInSystemExplorer(path));
+    }
+
+    @Override
+    public DBNPathBase openFileSystemSelector(
+        @NotNull String title,
+        boolean folder,
+        int style,
+        boolean binary,
+        String[] filterExt,
+        String defaultValue
+    ) {
+        showMessageBox("Not supported", "External file system are not supported", true);
+        return null;
     }
 
     @Override
@@ -695,7 +720,7 @@ public class DesktopUI implements DBPPlatformUI {
             return false;
         }
     }
-    
+
     private static long getLongOperationTime() {
         try {
             return PlatformUI.getWorkbench().getProgressService().getLongOperationTime();
@@ -703,5 +728,4 @@ public class DesktopUI implements DBPPlatformUI {
             return 800; // see org.eclipse.ui.internal.progress.ProgressManager.getLongOperationTime()
         }
     }
-
 }
