@@ -1,6 +1,6 @@
 /*
  * DBeaver - Universal Database Manager
- * Copyright (C) 2010-2023 DBeaver Corp and others
+ * Copyright (C) 2010-2025 DBeaver Corp and others
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -22,17 +22,23 @@ import org.eclipse.swt.events.SelectionEvent;
 import org.eclipse.swt.layout.FillLayout;
 import org.eclipse.swt.layout.GridData;
 import org.eclipse.swt.widgets.*;
+import org.jkiss.code.NotNull;
+import org.jkiss.code.Nullable;
 import org.jkiss.dbeaver.DBException;
 import org.jkiss.dbeaver.Log;
 import org.jkiss.dbeaver.model.DBPDataSourceContainer;
+import org.jkiss.dbeaver.model.DBPEvent;
+import org.jkiss.dbeaver.model.DBPEventListener;
 import org.jkiss.dbeaver.model.access.DBAAuthModel;
 import org.jkiss.dbeaver.model.connection.DBPAuthModelDescriptor;
-import org.jkiss.dbeaver.registry.DataSourceOriginLocal;
+import org.jkiss.dbeaver.model.connection.DBPConnectionConfiguration;
+import org.jkiss.dbeaver.registry.DataSourceDescriptor;
 import org.jkiss.dbeaver.registry.DataSourceProviderRegistry;
+import org.jkiss.dbeaver.registry.configurator.DBPConnectionEditIntention;
 import org.jkiss.dbeaver.registry.configurator.UIPropertyConfiguratorDescriptor;
 import org.jkiss.dbeaver.registry.configurator.UIPropertyConfiguratorRegistry;
 import org.jkiss.dbeaver.registry.driver.DriverDescriptor;
-import org.jkiss.dbeaver.runtime.DBWorkbench;
+import org.jkiss.dbeaver.ui.AbstractObjectPropertyConfigurator;
 import org.jkiss.dbeaver.ui.IElementFilter;
 import org.jkiss.dbeaver.ui.IObjectPropertyConfigurator;
 import org.jkiss.dbeaver.ui.UIUtils;
@@ -46,34 +52,72 @@ import java.util.List;
  * ConnectionPageWithAuth
  */
 
-public class AuthModelSelector extends Composite {
+public class AuthModelSelector extends Composite implements DBPEventListener {
 
     private static final Log log = Log.getLog(DataSourceProviderRegistry.class);
+
+    private IObjectPropertyConfigurator<Object, DBPDataSourceContainer> sharedConfigurator;
 
     private IElementFilter<DBPAuthModelDescriptor> modelFilter;
     private IElementFilter<DBPAuthModelDescriptor> modelChangeFilter;
     private List<? extends DBPAuthModelDescriptor> allAuthModels;
     private DBPDataSourceContainer activeDataSource;
     private DBPAuthModelDescriptor selectedAuthModel;
-    private Composite modelConfigPlaceholder;
+    private final Composite modelConfigPlaceholder;
     private IObjectPropertyConfigurator<Object, DBPDataSourceContainer> authModelConfigurator;
-    private Runnable panelExtender;
-    private Runnable changeListener;
+    private final Runnable panelExtender;
+    private final Runnable changeListener;
     private Combo authModelCombo;
-    protected Button sharedCredentialsCheck;
+    private boolean authSettingsEnabled = true;
+    private final boolean isEnableSharedConfigurator;
+    private final DBPConnectionEditIntention intention;
 
-    public AuthModelSelector(Composite parent, Runnable panelExtender, Runnable changeListener) {
+    public AuthModelSelector(
+        Composite parent,
+        Runnable panelExtender,
+        Runnable changeListener,
+        boolean enableShared,
+        DBPConnectionEditIntention intention
+    ) {
         super(parent, SWT.NONE);
         setLayout(new FillLayout());
 
         this.panelExtender = panelExtender;
         this.changeListener = changeListener;
+        this.isEnableSharedConfigurator = enableShared;
+        this.intention = intention;
 
-        modelConfigPlaceholder = UIUtils.createControlGroup(this, UIConnectionMessages.dialog_connection_auth_group, 2, GridData.FILL_HORIZONTAL, 0);
+        modelConfigPlaceholder = UIUtils.createControlGroup(
+            this,
+            UIConnectionMessages.dialog_connection_auth_group,
+            2,
+            GridData.FILL_HORIZONTAL,
+            0
+        );
+
+        UIPropertyConfiguratorDescriptor configDescriptor = UIPropertyConfiguratorRegistry.getInstance()
+            .getDescriptor(DBAAuthModel.class.getName());
+        if (configDescriptor != null && isEnableSharedConfigurator) {
+            try {
+                sharedConfigurator = configDescriptor.createConfigurator();
+            } catch (Exception e) {
+                log.error("Error creating shared configurator", e);
+            }
+        }
+
+        addDisposeListener(e -> {
+            if (activeDataSource != null) {
+                activeDataSource.getRegistry().removeDataSourceListener(this);
+            }
+        });
     }
 
     public DBPAuthModelDescriptor getSelectedAuthModel() {
         return selectedAuthModel;
+    }
+
+    public DBPDataSourceContainer getActiveDataSource() {
+        return activeDataSource;
     }
 
     Composite getAuthPanelComposite() {
@@ -92,18 +136,28 @@ public class AuthModelSelector extends Composite {
         UIUtils.disposeChildControls(modelConfigPlaceholder);
     }
 
-    public void loadSettings(DBPDataSourceContainer dataSourceContainer, DBPAuthModelDescriptor activeAuthModel, String defaultAuthModelId) {
+    public void loadSettings(
+        @NotNull DBPDataSourceContainer dataSourceContainer,
+        @Nullable DBPAuthModelDescriptor activeAuthModel,
+        @Nullable String defaultAuthModelId
+    ) {
+        if (this.activeDataSource != null) {
+            this.activeDataSource.getRegistry().removeDataSourceListener(this);
+        }
         this.activeDataSource = dataSourceContainer;
+        this.activeDataSource.getRegistry().addDataSourceListener(this);
+
         this.selectedAuthModel = activeAuthModel;
+        this.authSettingsEnabled = !dataSourceContainer.isSharedCredentials();
         this.allAuthModels = activeDataSource.getDriver() == DriverDescriptor.NULL_DRIVER ?
             DataSourceProviderRegistry.getInstance().getAllAuthModels() :
             DataSourceProviderRegistry.getInstance().getApplicableAuthModels(activeDataSource.getDriver());
         this.allAuthModels.removeIf(o -> modelFilter != null && !modelFilter.isValidElement(o));
         this.allAuthModels.sort((Comparator<DBPAuthModelDescriptor>) (o1, o2) ->
-            o1.isDefaultModel() ? -1 :
-                o2.isDefaultModel() ? 1 :
+            o1.isDefaultModel() && !o2.isDefaultModel() ? -1 :
+                o2.isDefaultModel() && !o1.isDefaultModel() ? 1 :
                     o1.getName().compareTo(o2.getName()));
-        if (selectedAuthModel == null && !CommonUtils.isEmpty(defaultAuthModelId)) {
+        if ((selectedAuthModel == null || !allAuthModels.contains(selectedAuthModel)) && !CommonUtils.isEmpty(defaultAuthModelId)) {
             // Set default to native
             for (DBPAuthModelDescriptor amd : allAuthModels) {
                 if (amd.getId().equals(defaultAuthModelId)) {
@@ -112,21 +166,40 @@ public class AuthModelSelector extends Composite {
                     break;
                 }
             }
-            if (selectedAuthModel == null) {
+            if (selectedAuthModel == null || !allAuthModels.contains(selectedAuthModel)) {
                 // First one
-                selectedAuthModel = allAuthModels.get(0);
+                selectedAuthModel = allAuthModels.getFirst();
                 dataSourceContainer.getConnectionConfiguration().setAuthModelId(selectedAuthModel.getId());
             }
         }
-        if (this.sharedCredentialsCheck != null) {
-            this.sharedCredentialsCheck.setSelection(activeDataSource.isSharedCredentials());
+        if (sharedConfigurator != null && isEnableSharedConfigurator) {
+            sharedConfigurator.loadSettings(activeDataSource);
         }
 
         changeAuthModel();
-
-        boolean isExternallyProvided = !DataSourceOriginLocal.ORIGIN_ID.equals(activeDataSource.getOrigin().getType());
-        authModelCombo.setEnabled(!isExternallyProvided);
     }
+
+    @Override
+    public void handleDataSourceEvent(@NotNull DBPEvent event) {
+        if (event.getAction() == DBPEvent.Action.OBJECT_UPDATE &&
+            event.getData() instanceof DBPConnectionConfiguration newConfig &&
+            event.getObject() == activeDataSource
+        ) {
+            UIUtils.asyncExec(() -> {
+                DBPConnectionConfiguration currentConfig = activeDataSource.getConnectionConfiguration();
+                currentConfig.setUserName(newConfig.getUserName());
+                currentConfig.setUserPassword(newConfig.getUserPassword());
+                currentConfig.setUrl(newConfig.getUrl());
+                currentConfig.setAuthProperties(newConfig.getAuthProperties());
+                currentConfig.setProviderProperties(newConfig.getProviderProperties());
+
+                if (authModelConfigurator != null && !isDisposed()) {
+                    authModelConfigurator.loadSettings(activeDataSource);
+                }
+            });
+        }
+    }
+
 
     private void changeAuthModel() {
         showAuthModelSettings();
@@ -163,29 +236,16 @@ public class AuthModelSelector extends Composite {
                     modelConfigPlaceholder.setFocus();
                     changeListener.run();
                 } finally {
-                    authModelCombo.setToolTipText(selectedAuthModel == null ? "" : CommonUtils.notEmpty(selectedAuthModel.getDescription()));
+                    authModelCombo.setToolTipText(selectedAuthModel == null
+                        ? ""
+                        : CommonUtils.notEmpty(selectedAuthModel.getDescription()));
                 }
                 UIUtils.resizeShell(authModelCombo.getShell());
             }
         });
         UIUtils.createEmptyLabel(authModelComp, 1, 1).setLayoutData(new GridData(GridData.FILL_HORIZONTAL));
-        if (DBWorkbench.isDistributed() && !activeDataSource.getProject().isPrivateProject()) {
-            sharedCredentialsCheck = UIUtils.createCheckbox(authModelComp,
-                "Share credentials",
-                activeDataSource == null || activeDataSource.isSharedCredentials());
-            sharedCredentialsCheck.setToolTipText("Saved credentials will be accessible to all users who have access to this connection configuration");
-            sharedCredentialsCheck.setLayoutData(new GridData(GridData.HORIZONTAL_ALIGN_END));
-            sharedCredentialsCheck.addSelectionListener(new SelectionAdapter() {
-                @Override
-                public void widgetSelected(SelectionEvent e) {
-//                    if (sharedCredentialsCheck.getSelection()) {
-//                        savePasswordCheck.setEnabled(true);
-//                    }
-                }
-            });
-            if (sharedCredentialsCheck.getSelection()) {
-//                savePasswordCheck.setEnabled(true);
-            }
+        if (sharedConfigurator != null) {
+            sharedConfigurator.createControl(authModelComp, this, this::refreshCredentials);
         } else {
             UIUtils.createEmptyLabel(authModelComp, 1, 1);
         }
@@ -197,18 +257,25 @@ public class AuthModelSelector extends Composite {
             authModelCombo.select(allAuthModels.indexOf(selectedAuthModel));
             authModelCombo.setToolTipText(CommonUtils.notEmpty(selectedAuthModel.getDescription()));
         }
-        boolean authSelectorVisible = allAuthModels.size() >= 2;
+        boolean authSelectorVisible = this.intention.authModelSelectionEnabled && allAuthModels.size() >= 2;
         UIUtils.setControlVisible(authModelLabel, authSelectorVisible);
         UIUtils.setControlVisible(authModelComp, authSelectorVisible);
-        ((Group)modelConfigPlaceholder).setText(authSelectorVisible ? UIConnectionMessages.dialog_connection_auth_group : UIConnectionMessages.dialog_connection_auth_group + " (" + selectedAuthModel.getName() + ")");
+        ((Group) modelConfigPlaceholder).setText(authSelectorVisible
+            ? UIConnectionMessages.dialog_connection_auth_group
+            : UIConnectionMessages.dialog_connection_auth_group + " (" + selectedAuthModel.getName() + ")");
 
+        boolean sharedCredsProhibitedByIntention = this.intention == DBPConnectionEditIntention.CREDENTIALS_ONLY && this.activeDataSource.isSharedCredentials();
         DBAAuthModel<?> authModel = selectedAuthModel.getInstance();
-        {
+        if (authSettingsEnabled && !sharedCredsProhibitedByIntention) {
             authModelConfigurator = null;
-            UIPropertyConfiguratorDescriptor uiConfiguratorDescriptor = UIPropertyConfiguratorRegistry.getInstance().getDescriptor(authModel);
+            UIPropertyConfiguratorDescriptor uiConfiguratorDescriptor = UIPropertyConfiguratorRegistry.getInstance()
+                .getDescriptor(authModel);
             if (uiConfiguratorDescriptor != null) {
                 try {
                     authModelConfigurator = uiConfiguratorDescriptor.createConfigurator();
+                    if (authModelConfigurator instanceof AbstractObjectPropertyConfigurator<?, ?> abstractConfigurator) {
+                        abstractConfigurator.setEditIntention(this.intention);
+                    }
                 } catch (DBException e) {
                     log.error(e);
                 }
@@ -217,13 +284,19 @@ public class AuthModelSelector extends Composite {
             }
         }
 
+        if (sharedCredsProhibitedByIntention) {
+            UIUtils.createInfoLabel(modelConfigPlaceholder, "Shared credentials cannot be edited", GridData.FILL_BOTH, 1);
+        }
+
         if (authModelConfigurator != null) {
-            authModelConfigurator.createControl(modelConfigPlaceholder, authModel, () -> changeListener.run());
-            if (activeDataSource != null && selectedAuthModel != null) {
-                // Set selected auth model to datasource config
-                activeDataSource.getConnectionConfiguration().setAuthModelId(selectedAuthModel.getId());
+            authModelConfigurator.createControl(modelConfigPlaceholder, authModel, changeListener);
+            if (activeDataSource != null) {
+                if (selectedAuthModel != null) {
+                    // Set selected auth model to datasource config
+                    activeDataSource.getConnectionConfiguration().setAuthModelId(selectedAuthModel.getId());
+                }
+                authModelConfigurator.loadSettings(activeDataSource);
             }
-            authModelConfigurator.loadSettings(activeDataSource);
         } else {
             if (selectedAuthModel != null && !CommonUtils.isEmpty(selectedAuthModel.getDescription())) {
                 Label descLabel = new Label(modelConfigPlaceholder, SWT.NONE);
@@ -244,17 +317,38 @@ public class AuthModelSelector extends Composite {
         }
     }
 
+    private void refreshCredentials() {
+        if (activeDataSource instanceof DataSourceDescriptor dsd) {
+            dsd.resetAllSecrets();
+        }
+        authModelConfigurator.loadSettings(activeDataSource);
+    }
+
     public boolean isComplete() {
         return authModelConfigurator == null || authModelConfigurator.isComplete();
     }
 
     public void saveSettings(DBPDataSourceContainer dataSource) {
-        if (this.sharedCredentialsCheck != null) {
-            dataSource.setSharedCredentials(this.sharedCredentialsCheck.getSelection());
+        if (sharedConfigurator != null) {
+            sharedConfigurator.saveSettings(dataSource);
         }
 
         if (authModelConfigurator != null) {
             authModelConfigurator.saveSettings(dataSource);
+        }
+    }
+
+    public boolean isAuthSettingsEnabled() {
+        return authSettingsEnabled;
+    }
+
+    public void enableAuthSettings(boolean enable, boolean redraw) {
+        if (authSettingsEnabled != enable) {
+            authSettingsEnabled = enable;
+            if (redraw) {
+                authModelConfigurator = null;
+                changeAuthModel();
+            }
         }
     }
 
